--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,6 +32,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PG'
 - !lcsh 'Polish fiction -- Translations into English'
+- GITenberg
 tableOfContents: 'Life and death: a Hindu legend -- Is he the dearest one? -- A legend
   of the sea -- The cranes -- The judgment of Peter and Paul on Olympus.'
 title: Life and Death, and Other Legends and Stories
